5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1638_652.log
== TEST (2019-04-09 11:22:58) 
-- CODE:
n = int(input("insira o numero n:"))

if = (100 <= n and n >=):
	mensagem = "SIM"
	else:
		mensagem = "NAO"
-- ERROR:
File "XXXX", line 3
    if = (100 <= n and n >=):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:05) 
-- CODE:
n = int(input("insira o numero n:"))

if (100 <= n and n >=):
	mensagem = "SIM"
	else:
		mensagem = "NAO"
-- ERROR:
File "XXXX", line 3
    if (100 <= n and n >=):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:16) 
-- CODE:
n = int(input("insira o numero n:"))

if (100 <= n and n >= 999):
	mensagem = "SIM"
	else:
		mensagem = "NAO"
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:23) 
-- CODE:
n = int(input("insira o numero n:"))

if (100 <= n and n >= 999):
	mensagem = "SIM"
else:
		mensagem = "NAO"
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:46) 
-- CODE:
n = int(input("insira o numero n:"))

if (100 <= n and n >= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:24:25) 
-- CODE:
n = int(input("insira o numero n:"))

if (100 >= n and n <= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:24:49) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:24:55) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- EXECUTION TIME:
0.177873
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:01) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:08) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
		mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:19) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.136148
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:56) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:25) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:26:32) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.142807
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:33) 
-- CODE:
n = int(input("insira o numero n:"))

if (n >= 100 and n <= 999):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:30:35) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
print(N)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:50) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n//N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:31:56) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n//N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.151692
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:32:11) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n/N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.112305
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:32:14) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n/N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.151
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:32:18) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n/N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:32:26) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n/N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:33:13) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n % N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:33:20) 
-- CODE:
n = int(input("insira o numero n:"))

N = n - (n//100) *100 
if (n % N == 0):
	mensagem = print("SIM")
else:
	mensagem = print("NAO")
-- EXECUTION TIME:
0.146608
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
